openxds-server/templates/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: openxds-server
  namespace: oth-sync
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: openxds-server
  policyTypes:
    - Ingress
    - Egress
  egress:
    - to: # Test Komponent B
        - namespaceSelector:
            matchLabels:
              name: oth-sync
        - namespaceSelector:
            matchLabels:
              name: data-storage-services
    - to: # nodeLocal DNS
        - ipBlock:
            cidr: 169.254.20.10/32
      ports:
        - protocol: UDP
          port: 53
    - to: # Public LoadBal
        - ipBlock:
            cidr: { { .Values.networkPolicy.loadbalancer } }
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - protocol: TCP
          port: 8443
        - protocol: TCP
          port: 80
  ingress:
    - from: # Web-trafik
        - namespaceSelector:
            matchLabels:
              name: ingress-nginx
    - from:
        - namespaceSelector:
            matchLabels:
              name: oth-sync
